# Strategy_Game

./: CMakeLists.txt  air_decorator.h  base_decorator.h  client_adapter.h  command.h  dark_fraction.h  human_tree.h  main.cpp  main_lib.h  readme.txt  simple_button.h  surface_decorator.h  tester.cpp  tests.h  wrap.h
doc_doxygen/html/: air__decorator_8h_source.html  annotated.html  army_8h_source.html  base__decorator_8h_source.html  classadapter__main-members.html  classadapter__main.html  classadapter__main_1_1command__1-members.html  classadapter__main_1_1command__1.html  classadapter__main_1_1command__2-members.html  classadapter__main_1_1command__2.html  classadapter__main_1_1command__3-members.html  classadapter__main_1_1command__3.html  classadapter__main_1_1command__4-members.html  classadapter__main_1_1command__4.html  classadapter__main_1_1command__5-members.html  classadapter__main_1_1command__5.html  classadapter__main_1_1command__6-members.html  classadapter__main_1_1command__6.html  classadapter__main_1_1command__7-members.html  classadapter__main_1_1command__7.html  classadapter__main_1_1command__8-members.html  classadapter__main_1_1command__8.html  classadapter__main_1_1command__9-members.html  classadapter__main_1_1command__9.html  classadapter__main_1_1command__war-members.html  classadapter__main_1_1command__war.html  classair__decorator-members.html  classair__decorator.html  classair__factory-members.html  classair__factory.html  classanti__aircraft-members.html  classanti__aircraft.html  classarmored__mecha-members.html  classarmored__mecha.html  (+86 more)
(+121 files in other folders)
