cmake_minimum_required(VERSION 3.2)
project(my_first_real_strategy)
unset(WITH_TESTS CACHE)
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -pthread")
set(SOURCES_FILES2 "tester.cpp")
set(SOURCE_FILES main.cpp main_lib.h human_tree.h dark_fraction.h tests.h)
if(DEBUG)
	set(CMAKE_BUILD_TYPE Debug)
endif()
if (WITH_TEST)
    add_executable(runTests ${SOURCES_FILES2})
    target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)
else()
    add_executable(my_first_real_strategy ${SOURCE_FILES})
endif()
